# alphaledger

./: .env.template  .gitignore  README.md  annotation_app.py  databricks.yml  db.py  pyproject.toml  ticker_to_cik.json
nbs/: eval_generation.ipynb  metrics.ipynb  thesis.ipynb  xbrl_parse_exp.ipynb
output/: filings_metadata.json
src/alphaledger/: __init__.py  config.py  extract.py  formatter.py  knowledge_base.py  metrics.py  models.py  process_xbrl.py  sec.py  tui.py  universe.py  valuations.py
tests/: test_process_xbrl.py  test_universe.py
tests/data/000005114324000012/: ibm-20231231.xsd  ibm-20231231_cal.xml  ibm-20231231_def.xml  ibm-20231231_lab.xml  ibm-20231231_pre.xml
universes/indices/: sp100.yaml
universes/sectors/: cloud_computing.yaml
