[project]
name = "alphaledger"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Forrest Murray", email = "forrest.murray@databricks.com" }
]
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.13.3",
    "databricks-connect>=16.1.3",
    "deltalake>=0.25.5",
    "lxml>=5.3.1",
    "openai>=1.68.2",
    "pandas>=2.2.3",
    "polars>=1.26.0",
    "py-xbrl>=2.2.14",
    "pydantic>=2.10.6",
    "pydantic-settings>=2.8.1",
    "pytest>=8.3.5",
    "pyyaml>=6.0.2",
    "requests>=2.32.3",
    "rich>=13.9.4",
    "textual>=3.1.1",
    "torch>=2.6.0",
    "yfinance>=0.2.54",
]

[project.scripts]
alphaledger = "alphaledger:main"
build-kb = "alphaledger:build_kb"
assistant = "alphaledger:assistant"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "lancedb>=0.21.1",
]
